[tool.poetry]
name = "sheets-graph"
version = "0.1.0"
description = ""
authors = ["Jacob Ashdown <jcbashdown@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
psycopg2-binary = "^2.9.9"
graphene-django = "^3.2.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
